<resources>
    <string name="app_name">FishingApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_starting_port">WEIGH ANCHOR</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>


    <string name="sign_up">SIGN UP</string>
    <string name="sign_in">SIGN IN</string>
    <string name="username_hint">&#160;&#160;&#160;USERNAME/EMAIL</string>
    <string name="password_hint">&#160;&#160;&#160;PASSWORD</string>
    <string name="forgot_password">Forgot password? Click here.</string>
</resources>