<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="1.0"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    >

    <fragment
        android:id="@+id/nav_port_fragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navGraph="@navigation/mobile_navigation" />

    <Button
        android:id="@+id/signInButton"
        android:layout_width="240dp"
        android:layout_height="60dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="200dp"
        android:text="@string/sign_in"
        app:iconTint="?android:attr/colorFocusedHighlight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:rippleColor="@android:color/black"
        app:strokeColor="#FF9800" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="240dp"
        android:layout_height="60dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="80dp"
        android:text="@string/sign_up"
        app:iconTint="?android:attr/colorFocusedHighlight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:rippleColor="@android:color/black"
        app:strokeColor="#FF9800" />

    <ImageView
        android:id="@+id/loginBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/background"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="79dp" />

    <EditText
        android:id="@+id/emailText"
        android:layout_width="290dp"
        android:layout_height="35dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="160dp"
        android:layout_marginRight="2dp"
        android:background="@drawable/edit_text_bg"
        android:ems="10"
        android:hint= "@string/username_hint"
        android:inputType="textEmailAddress"
        android:textColor="#000000"
        android:textSize="20dp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible"
        android:typeface="serif"/>

    <EditText
        android:id="@+id/passwordText"
        android:layout_width="300dp"
        android:layout_height="35dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="2dp"
        android:background="@drawable/edit_text_bg"
        android:backgroundTintMode="screen"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:textColor="#000000"
        android:textSize="20dp"
        android:textStyle="bold"
        android:typeface="serif"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailText" />

    <EditText
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordText"
        android:inputType="none"
        android:text="@string/forgot_password"
        android:textColor="@color/white"
        android:textSize="13dp"
        android:singleLine="true"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signInButton"
        app:layout_constraintBottom_toTopOf="@id/signUpButton"
        android:inputType="none"
        android:text="---or---"
        android:textColor="@color/white"
        android:textSize="13dp"
        android:singleLine="true"
        android:textStyle="bold"/>

</androidx.constraintlayout.widget.ConstraintLayout>